--- a/_config.yml
+++ b/_config.yml
@@ -47,4 +47,4 @@ tagcloud: true
 #不开启——
 #aboutme: true
 #开启——
-aboutme: 关注UX，FD，专注Web前端开发，努力做一个浪漫的工程师。
+aboutme: 关注UX，FD，专注Web前端开发，努力探索如何做一名优雅的FEDer。
