修改签名档

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ subnav:
   #rss: "#"
   #zhihu: "#"
   #douban: "#"
-  #mail: "grinson50@gmail.com"
+  mail: "grinson50@gmail.com"
   facebook: "https://www.facebook.com/profile.php?id=100003104963576"
   #google: "#"
   twitter: "https://twitter.com/grinson50"
